src/css/base.css
*,
*::before,
*::after {
  box-sizing: inherit;
}

html {
  box-sizing: border-box;
  text-size-adjust: 100%;
}

html,
body {
  height: 100%;
}

body {
  color: var(--color-text);
  font-family: "Open Sans", sans-serif;
  line-height: var(--line-height-body);
  margin: 0;
  scroll-behavior: smooth;
}

body.rest-api {
  scroll-behavior: initial;
}

a {
  color: var(--color-link);
  outline: none;
  text-decoration: none;
  font-family: "Open Sans", sans-serif;
}

a:focus,
a:hover {
  text-decoration: underline;
  color: var(--color-link-hover);
}

a:active {
  color: var(--color-link-active);
}

button,
input,
select {
  font-family: inherit;
  outline: none;
}

button {
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
}

button::-moz-focus-inner {
  border: 0;
}

code,
kbd,
pre {
  font-family: 'Source Code Pro', monospace;
}

code {
  background-color: var(--color-brand-peach);
  word-spacing: -0.125em;
  color: var(--color-brand-gray1);
}

/* special case inside redocly div to avoid overwriting redocly managed code colours */
#redoc code {
  background-color: inherit;
  color: inherit;
}

a code {
  color: var(--color-link);
  background-color: transparent;
}

html code {
  hyphens: none;
}

b,
strong {
  font-weight: var(--weight-semibold);
}

small {
  font-size: 0.8em;
}

em,
i {
  font-style: italic;
  font-family: "Open Sans", sans-serif;
  font-weight: 400;
}

.container,
.container-fluid {
  margin: 0 auto;
  /*  max-width: var(--width-container); */
  padding: 0 var(--width-container-gutter);
}

@media all and (max-width: 992px) {
  .container,
  .container-fluid {
    padding: 0 2rem;
  }
}

@media all and (max-width: 767px) {
  .container,
  .container-fluid {
    padding: 0 1.75rem;
  }
}

.hide,
.hide-nav {
  display: none;
}

@media screen and (min-width: 992px) {
  .body.container {
    padding-left: 0;
  }
}
/* .container-fluid {
  max-width: var(--width-container-fluid);
  padding: 0;
  margin: 0 auto;
} */

/* checkbox css  */

/* Base for label styling */

[type="checkbox"]:not(:checked),
[type="checkbox"]:checked {
  position: absolute;
  left: -9999px;
}

[type="checkbox"]:not(:checked) + label,
[type="checkbox"]:checked + label {
  position: relative;
  padding-left: 2rem;
  cursor: pointer;
  display: inline-block;
}

/* checkbox aspect */
[type="checkbox"]:not(:checked) + label::before,
[type="checkbox"]:checked + label::before {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 25px;
  height: 25px;
  border: 1px solid var(--checkbox-border-color);
  background: #f9f9f9;
  border-radius: 3px;
  display: inline-block;
}
/* checked mark aspect */
[type="checkbox"]:not(:checked) + label::after,
[type="checkbox"]:checked + label::after {
  content: "\2713\0020";
  position: absolute;
  top: 0;
  left: 0;
  font-size: 0.875rem;
  line-height: 0.8;
  color: var(--color-brand-white);
  transition: all 0.2s;
  width: 25px;
  height: 25px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--color-brand-blue-secondary);
  border-radius: 3px;
}
/* checked mark aspect changes */
[type="checkbox"]:not(:checked) + label::after {
  opacity: 0;
  transform: scale(0);
}

[type="checkbox"]:checked + label::after,
.active[type="checkbox"] + label::after {
  opacity: 1;
  transform: scale(1);
}
/* disabled checkbox */
[type="checkbox"]:disabled:not(:checked) + label::before,
[type="checkbox"]:disabled:checked + label::before {
  box-shadow: none;
  border-color: #bbb;
  background-color: #ddd;
}

[type="checkbox"]:disabled:checked + label::after {
  color: #999;
}

[type="checkbox"]:disabled + label {
  color: #aaa;
}

label:hover::before {
  border: 2px solid var(--color-brand-blue);
  outline: none;
}

label,
label:focus,
label:active,
label::before,
label::after {
  outline: none;
  outline-width: 0;
}

/* Common margin padding css class */
/* margin-top */
.mt-0 {
  margin-top: 0 !important;
}

.mt-1 {
  margin-top: var(--base-extra-small-space) !important;  /* 8px */
}

.mt-2 {
  margin-top: var(--base-small-space) !important;        /* 12px */
}

.mt-3 {
  margin-top: var(--base-space) !important;             /* 16px */
}

.mt-4 {
  margin-top: var(--base-medium-space) !important;    /* 24px */
}

.mt-5 {
  margin-top: var(--base-large-space) !important;     /* 32px */
}

/* margin-bottom */
.mb-0 {
  margin-bottom: 0 !important;
}

.mb-1 {
  margin-bottom: var(--base-extra-small-space) !important;   /* 8px */
}

.mb-2 {
  margin-bottom: var(--base-small-space) !important;     /* 12px */
}

.mb-3 {
  margin-bottom: var(--base-space) !important;         /* 16px */
}

.mb-4 {
  margin-bottom: var(--base-medium-space) !important;   /* 24px */
}

.mb-5 {
  margin-bottom: var(--base-large-space) !important;   /* 32px */
}

/* Responsive css */
/* For tablet,ipad Portrait view mode 1024px screen */
@media screen and (min-width: 740px) {
  /* Spacing media query */
  .mt-sm-0 {
    margin-top: 0 !important;
  }

  .mt-sm-1 {
    margin-top: var(--base-extra-small-space) !important;  /* 8px */
  }

  .mt-sm-2 {
    margin-top: var(--base-small-space) !important;        /* 12px */
  }

  .mt-sm-3 {
    margin-top: var(--base-space) !important;             /* 16px */
  }

  .mt-sm-4 {
    margin-top: var(--base-medium-space) !important;    /* 24px */
  }

  .mt-sm-5 {
    margin-top: var(--base-large-space) !important;     /* 32px */
  }

  /* margin-bottom */
  .mb-sm-0 {
    margin-bottom: 0 !important;
  }

  .mb-sm-1 {
    margin-bottom: var(--base-extra-small-space) !important;   /* 8px */
  }

  .mb-sm-2 {
    margin-bottom: var(--base-small-space) !important;     /* 12px */
  }

  .mb-sm-3 {
    margin-bottom: var(--base-space) !important;         /* 16px */
  }

  .mb-sm-4 {
    margin-bottom: var(--base-medium-space) !important;   /* 24px */
  }

  .mb-sm-5 {
    margin-bottom: var(--base-large-space) !important;   /* 32px */
  }
}
/* For tablet,ipad landscape mode 1024px screen */
@media screen and (min-width: 993px) {
  .container-fluid {
    /*  max-width: var(--width-container-fluid); */
    padding: 0;
    margin: 0 auto;
  }

  /* Spacing media query */
  .mt-md-0 {
    margin-top: 0 !important;
  }

  .mt-md-1 {
    margin-top: var(--base-extra-small-space) !important;  /* 8px */
  }

  .mt-md-2 {
    margin-top: var(--base-small-space) !important;        /* 12px */
  }

  .mt-md-3 {
    margin-top: var(--base-space) !important;             /* 16px */
  }

  .mt-md-4 {
    margin-top: var(--base-medium-space) !important;    /* 24px */
  }

  .mt-md-5 {
    margin-top: var(--base-large-space) !important;     /* 32px */
  }

  /* margin-bottom */
  .mb-md-0 {
    margin-bottom: 0 !important;
  }

  .mb-md-1 {
    margin-bottom: var(--base-extra-small-space) !important;   /* 8px */
  }

  .mb-md-2 {
    margin-bottom: var(--base-small-space) !important;     /* 12px */
  }

  .mb-md-3 {
    margin-bottom: var(--base-space) !important;         /* 16px */
  }

  .mb-md-4 {
    margin-bottom: var(--base-medium-space) !important;   /* 24px */
  }

  .mb-md-5 {
    margin-bottom: var(--base-large-space) !important;   /* 32px */
  }
}
/* For large desktop to small desktop screen */
@media screen and (min-width: 1200px) {
  /* Spacing media query */
  .mt-lg-0 {
    margin-top: 0 !important;
  }

  .mt-lg-1 {
    margin-top: var(--base-extra-small-space) !important;  /* 8px */
  }

  .mt-lg-2 {
    margin-top: var(--base-small-space) !important;        /* 12px */
  }

  .mt-lg-3 {
    margin-top: var(--base-space) !important;             /* 16px */
  }

  .mt-lg-4 {
    margin-top: var(--base-medium-space) !important;    /* 24px */
  }

  .mt-lg-5 {
    margin-top: var(--base-large-space) !important;     /* 32px */
  }

  /* margin-bottom */
  .mb-lg-0 {
    margin-bottom: 0 !important;
  }

  .mb-lg-1 {
    margin-bottom: var(--base-extra-small-space) !important;   /* 8px */
  }

  .mb-lg-2 {
    margin-bottom: var(--base-small-space) !important;     /* 12px */
  }

  .mb-lg-3 {
    margin-bottom: var(--base-space) !important;         /* 16px */
  }

  .mb-lg-4 {
    margin-bottom: var(--base-medium-space) !important;   /* 24px */
  }

  .mb-lg-5 {
    margin-bottom: var(--base-large-space) !important;   /* 32px */
  }
}

